--- a/example.html
+++ b/example.html
@@ -3,11 +3,14 @@
 <head>
 </head>
 <body>
-  <script type="text/javascript" src="build/dat.gui.min.js"></script>
+  <script type="text/javascript" src="build/dat.gui.js"></script>
   <script type="text/javascript">
-    var obj = { x: 5 };
+    var obj = { int: 5, str: '!', boo: true, float: 5.0 };
     var gui = new dat.GUI();
-	gui.add(obj, 'x');	
+	  for (var prop in obj) {
+	    if (obj.hasOwnProperty(prop)) gui.add(obj, prop);
+	  }
+    var folder = gui.addFolder('folder');
   </script>
 </body>
 </html>
