Revert "Merge branch 'style'"
This reverts commit 8fc9ee2fe9f48fa46452f610922c46d54b503277, reversing
changes made to 8f0eba8ade601ec401a940d36caf4bd1fffaeb65.

--- a/example.html
+++ b/example.html
@@ -3,14 +3,11 @@
 <head>
 </head>
 <body>
-  <script type="text/javascript" src="build/dat.gui.js"></script>
+  <script type="text/javascript" src="build/dat.gui.min.js"></script>
   <script type="text/javascript">
-    var obj = { int: 5, str: '!', boo: true, float: 5.0 };
+    var obj = { x: 5 };
     var gui = new dat.GUI();
-	  for (var prop in obj) {
-	    if (obj.hasOwnProperty(prop)) gui.add(obj, prop);
-	  }
-    var folder = gui.addFolder('folder');
+	gui.add(obj, 'x');	
   </script>
 </body>
 </html>
